@@ -4899,13 +4899,13 @@ name|add
 argument_list|(
 literal|"segmentsFileSizeInBytes"
 argument_list|,
+name|getFileLength
+argument_list|(
 name|indexCommit
 operator|.
 name|getDirectory
 argument_list|()
-operator|.
-name|fileLength
-argument_list|(
+argument_list|,
 name|segmentsFileName
 argument_list|)
 argument_list|)
@@ -4973,6 +4973,54 @@ block|}
 return|return
 name|indexInfo
 return|;
+block|}
+DECL|method|getFileLength
+specifier|private
+specifier|static
+name|long
+name|getFileLength
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|String
+name|filename
+parameter_list|)
+block|{
+try|try
+block|{
+return|return
+name|dir
+operator|.
+name|fileLength
+argument_list|(
+name|filename
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// Whatever the error is, only log it and return -1.
+name|log
+operator|.
+name|warn
+argument_list|(
+literal|"Error getting file length for [{}]"
+argument_list|,
+name|filename
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+return|return
+operator|-
+literal|1
+return|;
+block|}
 block|}
 comment|/** Returns the sum of RAM bytes used by each segment */
 DECL|method|getIndexHeapUsed
